--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -20,7 +20,8 @@
 }
 .toolbar-background-md {
     border-color: #b2b2b2;
-    background: #f3745d;
+    background: #2a7de1;
+
 }
 .toolbar-title-md{
     color: #fff
