--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,7 +24,7 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #f3745d,
+  primary:    #2a7de1,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
